src/sass/_base.scss
/* ... */
.p-2-steps ul li img {
  margin-right:20px;
}
.magnify {
      padding: .5em;
          width: 100%;
}
.no-top-pad {
  padding-top:0;
}
.no-other-pad {
  padding: 0 0 0 2em!important;
}
figure {
  text-align:center;
  margin-bottom:1em;
  img:not(.one-hun) {
    // width:90%;
    padding-top:1em;
  }
}
.side-nav img:not(.hotspot) {
  right: 0px;
position: relative;
display:inline;
width: 17px;
height: 18px;
}
#pick-size {
//   width: 100%;
//   margin-top: -14em;
// margin-bottom: -14em;
}

.modal.in .modal-dialog {
    transform: translate(4vw, 10em);

}
.svg-test {
  padding:0!important;
  p {
    padding:60px!important;
  }
  .specs {
    margin: 0!important;
    padding: 60px;
  }
}
@media only screen and (min-width:1200px) and (max-width: 1400px) {
.modal.in .modal-dialog {
    transform: translate(7vw, 10em);
  }
}
@media only screen and (min-width:1100px) and (max-width: 1199px) {
.modal.in .modal-dialog {
    transform: translate(9vw, 10em);
  }
}
@media only screen and (min-width:1000px) and (max-width: 1099px) {
.modal.in .modal-dialog {
    transform: translate(12vw, 10em);
  }
}
.modal-body {
  border-top: 10px solid $pink;
  text-align:left;
  padding:60px!important;
}
.patients-container div:nth-child(5) {
  margin-bottom: 6em;
}

blockquote {
  color:#061922;
  font-size:42px;
  line-height: 48px;
  &.start-quote {
    color: white;
  }
}
.top-quote blockquote {
    margin: 0em 0em 2em 1em;
        font-weight: bold;
            max-width:600px;

}
.check-mark {
  text-align: right;
position: absolute;
top: 0px;
right: 35px;
font-size: 15px;
}
image {
      width: 100%;
}
.svg-text2 {
  background-color: rgba(221, 48, 123, 0.8);
  font-weight: bold;
  position: absolute;
  color: white;
  padding: 1.4em;
  width: 100%;
top: 13px;
  margin: .3em;
  line-height: 34px;
  z-index: 999;
  left: 0px;
  top: 21px;
    padding-left: 50px!important;
      &.full {
        width:98%;
        top:0;
        padding:1em;
        p {
          font-weight: 100;
          font-size: 20px;
          padding: 0em 2em 0em 2em;
        }
      }
}
.svg-text {
  background-color: rgba(221, 48, 123, 0.8);
  font-weight: bold;
  position: absolute;
  color: white;
  padding: 2em;
  width: 100%;
top: 13px;
  margin: .3em;
  line-height: 34px;
      z-index: 999;
  &.full {
    width:98%;
    top:0;
    padding:1em;
    p {
      font-weight: 100;
      font-size: 20px;
      padding: 0em 2em 0em 2em;
    }
  }
}
.specs {
  list-style:none;
  margin-left: 0em;
  padding-left: 0;
  li {
    font-size: 15px;
  }
}
.start-patient {
  position:absolute;
  top:0;right:0;bottom:0;left:0;
  width: 100%;
  height: 100%;
  z-index: 999999;
}
.size-1,.size-2,.size-3,.size-4 {
  cursor: pointer;
}
.size-1-active,.size-2-active,.size-3-active,.size-4-active {
  display: none;
}
.start-quote {
    margin-top: 3em;
    margin-bottom:2em;
    color: white;
}

#region-main .pick-overlay:before {
    content: '';
    position: absolute;
    left: 0;
    right: 0;
    bottom: 0;
    top: 0;
    background-color: $dark-blue;
    opacity: .9;
}
&.patient1 {
  border: rgba(221,48,123,.7) solid 15px;
    overflow: hidden;
}
&.patient2 {
  border: rgba(118,23,179,.7) solid 15px;
    overflow: hidden;
  }
&.patient3 {
  border: rgba(44,167,117, .7) solid 15px;
    overflow: hidden;
  }
.patients-container {
  position: absolute;
  .pick-patient {
    position: relative;
    color:white;
    margin-top: 1.5em;
    background: white;
    padding: 0em;
    .no-pad {
      cursor:pointer;
      height: 100%;
    }
    .col-md-5 {
      z-index: 9999;
      img:not(.up-next) {
        min-height: 286px;
        max-height: 430px;
        position: relative;
        right: 0;
        width: 100%;
        margin-bottom: 0em;
        &.patient1 {
          border: rgba(221,48,123,.7) solid 15px;
    overflow: hidden;
    }
        &.patient2 {
          border: rgba(118,23,179,.7) solid 15px;
    overflow: hidden;
       }
        &.patient3 {
          border: rgba(44,167,117, .7) solid 15px;
    overflow: hidden;
          }
      }
    }
    .up-next {
      position: absolute;
      left: -62px;
      top: -23px;
      &.finished {
        left: -48px;
      top: -1px;
      cursor:default!important;
      pointer-events: none;
      }
    }
    .lock {
      position: absolute;
      right: -22px;
      top: -22px;
      z-index: 999999;
          cursor: default;
    }


  }
  .locked:before {
    content:'';
    position: absolute;
    top:0;right:0;bottom:0;left:0;
    background-color:black;
    opacity: .5;
    z-index: 999999;
  }
  .patient-title {
    height: 100%;
    float: left;
    width: 76%;
    padding-top: 10px;
    padding-left: 40px;
    padding-bottom: 10px;
    font-family: jaf-facitweb;
    font-weight: 100;
    color: rgb(68, 68, 68);
    position:relative;
    & a:link {
      text-decoration: none;
    }
    h3 {
      font-size: 20px;
    font-weight: 100;
    color: #61838B;
    color: white;
    }
    h4 {
      font-size:13px;
      font-family: jaf-facitweb;
      text-transform: uppercase;
      font-weight: 100;
      color:white;

    }
  }
  .patient-copy {
    background-color:white;
    min-height: 286px;
    max-height: 286px;
    width: 100%;
    margin:0;
    p {
      font-size: 15px;
      color:#444;
      clear: both;
      padding: 2em 3em 1em 3em;
      line-height: 22px;
    }
  }
}
.patient-1 {
  margin-bottom: 4em;
}
.magnify {
  padding:0!important;
}
.left-arrow {
  position: absolute;
  top: 0;
  bottom: 0;
  background: $pink;
  right: 0;
  width: 50px;
  cursor: pointer;
  &:hover {
    text-decoration:none;
  }
  span {
    margin-top: 112px;
    position: relative;
    top: 17px;
    left: 14px;
    color: white;
    cursor:pointer;

  }
}
.no-link-color {
  position: relative;
  text-decoration: none!important;
  color: #404040;
  &:hover {
    color: #404040;
  }
}
/* ... */

